--- a/.config/example.yml
+++ b/.config/example.yml
@@ -6,7 +6,7 @@
 #───┘ URL └─────────────────────────────────────────────────────
 
 # Final accessible URL seen by a user.
-url: https://example.tld/
+url: https:/fanyelou.xyz/
 
 # ONCE YOU HAVE STARTED THE INSTANCE, DO NOT CHANGE THE
 # URL SETTINGS AFTER THAT!
@@ -55,15 +55,15 @@ url: https://example.tld/
 #───┘ PostgreSQL configuration └────────────────────────────────
 
 db:
-  host: localhost
+  host: db
   port: 5432
 
   # Database name
   db: misskey
 
   # Auth
-  user: example-misskey-user
-  pass: example-misskey-pass
+  user: hezizizi
+  pass: ygt123..
 
   # Whether disable Caching queries
   #disableCache: true
@@ -76,7 +76,7 @@ db:
 #───┘ Redis configuration └─────────────────────────────────────
 
 redis:
-  host: localhost
+  host: db
   port: 6379
   #pass: example-pass
   #prefix: example-prefix
