--- a/default.yml
+++ b/default.yml
@@ -6,7 +6,7 @@
 #───┘ URL └─────────────────────────────────────────────────────
 
 # Final accessible URL seen by a user.
-url: https:/fanyelou.xyz/
+url: https://fanyelou.xyz/
 
 # ONCE YOU HAVE STARTED THE INSTANCE, DO NOT CHANGE THE
 # URL SETTINGS AFTER THAT!
@@ -41,7 +41,7 @@ url: https:/fanyelou.xyz/
 #   You need to set Certificate in 'https' section.
 
 # To use option 1, uncomment below line.
-#port: 3000    # A port that your Misskey server should listen.
+port: 3000    # A port that your Misskey server should listen.
 
 # To use option 2, uncomment below lines.
 #port: 443
